# app-accelerators

./: .gitignore  .gitmodules  .mcp.json  README.md  n_cjson_helpers.c  n_request.c
01-indoor-floor-level-tracker/: README.md
02-fridge-fleet-monitor/: README.md  code.py
03-better-mouse-trap/: README.md
04-low-power-digital-signage/: README.md
05-analog-signage/: README.md
06-parking-lot-help-request/: README.md
07-piston-pump-motion-monitoring/: README.md
07-pump-jack-motion-monitoring/: README.md
08-power-monitoring-and-control/: README.md
08-power-quality-monitor/: README.md  drwattson-build.md
08-power-quality-monitor/firmware/zephyr/: CMakeLists.txt  Dockerfile  prj.conf
08-power-quality-monitor/firmware/zephyr/.devcontainer/: devcontainer.json
08-power-quality-monitor/firmware/zephyr/src/: UpbeatLabs_MCP39F521.cpp  UpbeatLabs_MCP39F521.h  env_updater.c  main.c
09-valve-monitor/: README.md
09-valve-monitor/firmware/zephyr/: CMakeLists.txt  Dockerfile  LICENSE  README.md  app.overlay
09-valve-monitor/firmware/zephyr/.devcontainer/: devcontainer.json
09-valve-monitor/firmware/zephyr/note-c/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  n_atof.c  n_cjson.h  n_const.c  n_helpers.c  n_hooks.c  n_i2c.c  n_printf.c  n_serial.c  n_ua.c  note.h
09-valve-monitor/firmware/zephyr/note-c/.github/actions/run_unit_tests/: Dockerfile
09-valve-monitor/firmware/zephyr/note-c/scripts/: run_unit_tests.sh
09-valve-monitor/firmware/zephyr/note-c/test/: CMakeLists.txt  README.md
09-valve-monitor/firmware/zephyr/note-c/test/src/: NoteGetEnv_test.cpp  NoteRequestWithRetry_test.cpp  serialNoteReset_test.cpp  serialNoteTransaction_test.cpp
09-valve-monitor/firmware/zephyr/src/: main.c  note_c_hooks.c  notecard.c  notecard.h
10-flow-rate-monitor/: README.md
11-generator-activity-monitor/: README.md
12-remote-power-control/: README.md
13-tool-usage-cycle-tracking/: README.md
14-cargo-tracker/: README.md  config.json
15-greenhouse-monitor/: README.md
16-power-outage-monitor/: README.md  config.json
17-refrigerator-monitor/: README.md  config.json
18-temperature-and-humidity-monitor/: README.md
18-temperature-and-humidity-monitor/firmware/zephyr/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
18-temperature-and-humidity-monitor/firmware/zephyr/.devcontainer/: devcontainer.json
18-temperature-and-humidity-monitor/firmware/zephyr/src/: actuator.c  actuator.h  bme280.c  bme280.h  env_updater.c  env_updater.h  main.c  note_c_hooks.h  publisher.c
19-sign-and-door-tilt/: README.md  config.json
20-motor-monitor-and-vibration/: README.md  config.json
21-sump-level-monitor/: README.md  config.json
22-roadway-impact-detection/: README.md  config.json
23-freight-car-door-motion-and-location/: README.md  config.json
24-animal-tracker/: README.md  config.json
25-construction-equipment-power-and-location/: README.md  config.json
26-emergency-vehicle-lights-monitor/: Build.md  README.md  config.json
27-cellular-connected-electronic-kiosk/: README.md  kiosk.py  package.sh  requirements.txt
28-door-state-monitor/: README.md  config.json  main.py
28-door-state-monitor/firmware/: CMakeLists.txt
28-door-state-monitor/firmware/.STM32CubeIDE/: .project
28-door-state-monitor/firmware/sparrow-application/: CMakeLists.txt  init.c
28-door-state-monitor/firmware/sparrow-application/dsm/: dsm.c
29-restroom-servicing-monitor/firmware/sparrow-application/: CMakeLists.txt  init.c
29-restroom-servicing-monitor/firmware/sparrow-application/rsm/: rsm.c  rsm.h
30-indoor-air-quality-and-gas-leak/firmware/sparrow-application/: CMakeLists.txt  init.c
30-indoor-air-quality-and-gas-leak/firmware/sparrow-application/aqi/: SparkFun_ENS160.h  aqi.cpp  aqi.h  sfe_bus.cpp  sfe_bus.h  sfe_ens160.cpp  sfe_ens160.h  sfe_ens160_regs.h
32-fall-detector-and-panic-button/firmware/sparrow-application/: CMakeLists.txt  LICENSE  init.c
32-fall-detector-and-panic-button/firmware/sparrow-application/fall_detector/: fall_detector.h
32-fall-detector-and-panic-button/firmware/sparrow-application/panic/: panic.c  panic.h
33-room-occupancy-monitor/firmware/sparrow-application/: CMakeLists.txt  init.c
33-room-occupancy-monitor/firmware/sparrow-application/dsm/: dsm.c  dsm.h
33-room-occupancy-monitor/firmware/sparrow-application/pir/: pir.c  pir.h
accelerator-archive/18-temperature-and-humidity-monitor/firmware/zephyr/src/note-c/test/: CMakeLists.txt
accelerator-archive/18-temperature-and-humidity-monitor/firmware/zephyr/src/note-c/test/include/: test_static.h  time_mocks.h
accelerator-archive/18-temperature-and-humidity-monitor/firmware/zephyr/src/note-c/test/src/: JAddBinaryToObject_test.cpp  JBoolValue_test.cpp  JContainsString_test.cpp  JGetBinaryFromObject_test.cpp  JGetNumber_test.cpp  JIsExactString_test.cpp  JNumberValue_test.cpp  JStringValue_test.cpp  NoteAdd_test.cpp  NoteDebugSyncStatus_test.cpp  NoteFactoryReset_test.cpp  NoteGetLocationMode_test.cpp  NoteGetLocation_test.cpp  NoteGetNetStatus_test.cpp  NoteGetServiceConfig_test.cpp  NoteGetVersion_test.cpp  NoteGetVoltage_test.cpp  NoteNewRequest_test.cpp  NotePayloadRetrieveAfterSleep_test.cpp  NotePayload_test.cpp  NotePrint_test.cpp  NoteRequestResponseJSON_test.cpp  NoteRequestWithRetry_test.cpp  NoteRequest_test.cpp  NoteSendToRoute_test.cpp  NoteSetEnvDefault_test.cpp  NoteSetFnI2C_test.cpp  NoteSetFnNoteMutex_test.cpp  NoteSetFnSerial_test.cpp  NoteSetUploadMode_test.cpp  NoteUserAgent_test.cpp  NoteWake_test.cpp  i2cNoteTransaction_test.cpp  serialNoteTransaction_test.cpp
accelerator-archive/37-heat-index-monitor/firmware/zephyr/src/notecard_env_var_manager/: CMakeLists.txt
accelerator-archive/37-heat-index-monitor/firmware/zephyr/src/notecard_env_var_manager/.github/workflows/: ci.yml
accelerator-archive/37-heat-index-monitor/firmware/zephyr/src/notecard_env_var_manager/scripts/: run_astyle.sh
accelerator-archive/37-heat-index-monitor/firmware/zephyr/src/notecard_env_var_manager/test/src/: NotecardEnvVarManager_test.cpp
(+1510 files in other folders)
